--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+html, body {
+  height: 100%;
+}
+
+footer {
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+}
+
 .meals {
   align-items: center;
   background: #0fa36b;
